--- a/index.html
+++ b/index.html
@@ -212,10 +212,9 @@ Sejarah Desa Sumberejo berawal dari penggabungan dua wilayah pada masa lampau. S
         </p>
 
         <div class="social">
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-brands fa-tiktok"></i></a>
-          <a href="#"><i class="fa-brands fa-youtube"></i></a>
+          <a href="https://www.instagram.com/bakti_swakarya"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.tiktok.com/@kknbhaktiswakarya_udb"><i class="fa-brands fa-tiktok"></i></a>
+          <a href="https://www.youtube.com/@BAKTISWAKARYA"><i class="fa-brands fa-youtube"></i></a>
         </div>
       </div>
 
@@ -265,3 +264,4 @@ Sejarah Desa Sumberejo berawal dari penggabungan dua wilayah pada masa lampau. S
 
   </body>
 </html>
+
